add example entities, repositories and controllers. add support for hibernate5 and java8 time with jackson.

--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,18 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- XML Support -->
+		<!-- Jackson Serialization -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 
 		<!-- Apache Commons HTTP -->
@@ -67,6 +75,10 @@
 		</dependency>
 
 		<!-- Security -->
+		<!--
+
+		|| Un-comment when testing is complete... ||
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -75,6 +87,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-ldap</artifactId>
 		</dependency>
+		-->
 
 		<!-- Bean Mapping -->
 		<dependency>
